# Personal-Study-Assistant

./: .gitignore  README.md  chainlit.md  pyproject.toml  requirements.txt
.chainlit/: config.toml
src/: __init__.py  agents.py  app.py  main.py
src/personal_study_assistant/: __init__.py
study_sessions/: 20250613_211508.json  20250613_211713.json
