[project]
name = "personal-study-assistant"
version = "0.1.0"
description = "An AI-powered study companion that helps students manage their study schedules"
authors = [
    {name = "muhammad sami", email = "m.samiwaseem1234@gmail.com"}
]
dependencies = [
    "chainlit>=2.5.5",
    "google-generativeai==0.3.2",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "schedule==1.2.1",
    "pydantic>=2.0",
    "dotenv",
]
requires-python = ">=3.9"

[project.scripts]
personal-study-assistant = "personal_study_assistant:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.chainlit]
name = "Personal Study Assistant"
description = "AI-powered study companion for students"
